--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,12 +25,11 @@
     {%- capture seo_raw -%}{% seo %}{%- endcapture -%}
     {%- assign seo_normalized = seo_raw | replace: "\r\n", "\n" | replace: "\r", "\n" -%}
     {%- assign seo_lines = seo_normalized | split: "\n" -%}
-
     {%- for line in seo_lines -%}
-    {%- assign trimmed_line = line | strip -%}
-    {%- unless trimmed_line contains "<link rel=\"canonical\"" -%}
-        {{ trimmed_line }}
-    {%- endunless -%}
+        {%- assign trimmed_line = line | strip -%}
+        {%- unless trimmed_line contains '<link rel="canonical"' -%}
+            {{ trimmed_line }}
+        {%- endunless -%}
     {%- endfor -%}
 
     <link rel="preload" href="{{ site.baseurl }}/assets/css/app.css" as="style">
