fix(head.html): refine SEO output to exclude canonical link from generated SEO lines

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,7 +27,7 @@
     {%- assign seo_lines = seo_normalized | split: "<br />" -%}
     {%- for line in seo_lines -%}
         {%- assign line_escaped = line | escape -%}
-        {%- unless line_escaped contains "&lt;link rel=&quot;canonical&quot; href=&quot;" -%}
+        {%- unless line_escaped contains "&lt;link rel=&quot;canonical&quot; href=&quot;" %}
             {{ line | strip }}
         {% endunless -%}
     {%- endfor -%}
