fix(head.html): refine SEO output to exclude canonical link from generated SEO lines

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,8 +28,8 @@
     {%- for line in seo_lines -%}
         {%- assign line_escaped = line | escape -%}
         {%- unless line_escaped contains "&lt;link rel=&quot;canonical&quot; href=&quot;" %}
-            {{ line | strip }}
-        {% endunless -%}
+    {{ line | strip }}
+        {%- endunless -%}
     {%- endfor -%}
 
     <link rel="preload" href="{{ site.baseurl }}/assets/css/app.css" as="style">
