chore: convert from subfolders to html files

--- a/_includes/head-scripts.html
+++ b/_includes/head-scripts.html
@@ -19,7 +19,7 @@
 
   (
     function () {
-      var u = "//mtrcs.set-outlooksignatures.com/";
+      var u = "//mtrcs.set-outlooksignatures.com";
       _paq.push(["setTrackerUrl", u + "mtrcs.php"]);
       _paq.push(["setSiteId", "1"]);
       var d = document;
