test: include pagination in each post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,8 @@
 ---
 layout: "default"
 ---
+{% include pagination.html %}
+
 <div class="content">
     <p>{{ page.date | date: '%Y-%m-%d' }}, {{ page.author }}</p>
 
