core: update matomo code

--- a/_includes/head-scripts.html
+++ b/_includes/head-scripts.html
@@ -3,11 +3,8 @@
   var _paq = window._paq = window._paq || [];
   _paq.push(["setRequestMethod", "POST"]);
   _paq.push(["disableCookies"]);
-  _paq.push(["deleteCookies"]);
   _paq.push(["disableAlwaysUseSendBeacon"]);
-  _paq.push(["disableQueueRequest"]);
   _paq.push(["setDocumentTitle", document.domain + ": " + document.title]);
-  _paq.push(["setCookieDomain", "*.set-outlooksignatures.com"]);
   _paq.push(["setDomains", ["*.set-outlooksignatures.com"]]);
   _paq.push(['enableHeartBeatTimer']);
   _paq.push(['setLinkClasses', ["mtrcs-external-link"]]);
@@ -19,7 +16,7 @@
 
   (
     function () {
-      var u = "//mtrcs.set-outlooksignatures.com/";
+      var u = "https://mtrcs.set-outlooksignatures.com/";
       _paq.push(["setTrackerUrl", u + "mtrcs.php"]);
       _paq.push(["setSiteId", "1"]);
       var d = document;
@@ -27,7 +24,6 @@
       s = d.getElementsByTagName("script")[0];
       g.type = "text/javascript";
       g.async = true;
-      g.defer = true;
       g.src = u + "mtrcs.js";
       s.parentNode.insertBefore(g, s);
     }
