--- a/_includes/head-scripts.html
+++ b/_includes/head-scripts.html
@@ -4,6 +4,7 @@
   _paq.push(["setRequestMethod", "POST"]);
   _paq.push(["disableCookies"]);
   _paq.push(["disableAlwaysUseSendBeacon"]);
+  _paq.push(["disableQueueRequest"]);
   _paq.push(["setDocumentTitle", document.domain + ": " + document.title]);
   _paq.push(["setDomains", ["*.set-outlooksignatures.com"]]);
   _paq.push(['enableHeartBeatTimer']);
