test: sitemap.xml

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,7 +28,7 @@
     {%- for line in seo_lines -%}
         {%- assign line_escaped = line | escape -%}
         {%- unless line_escaped contains "&lt;link rel=&quot;canonical&quot; href=&quot;" %}
-    {{ line | strip }}
+    {{ line | strip | replace: "/index.html", "/" }}
         {%- endunless -%}
     {%- endfor -%}
 
