fix: refactor scrolling banner implementation for vertical scrolling and improved CSS structure

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -231,6 +231,7 @@ html::after {
   height: 160px;
   width: 100%;
   object-fit: contain;
+  object-position: top left
 
   /* Stack images on top of each other */
   position: absolute;
