--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -210,8 +210,8 @@ html::after {
   overflow: hidden;
   pointer-events: none;
   /* Keep fixed pixel height for a stable viewport */
-  height: 160px;
-  max-height: 160px;
+  height: 10em;
+  max-height: 10em;
   width: 100%;
   /* Must be relative to contain absolutely positioned track/images */
   position: relative;
@@ -227,8 +227,8 @@ html::after {
 
 .signature-scrolling-banner .signature-scrolling-track img {
   /* Set fixed pixel height and width to exactly match the banner */
-  max-height: 160px;
-  height: 160px;
+  max-height: 10em;
+  height: 10rem;
   width: 100%;
   object-fit: contain;
   object-position: top left;
