revert signature scroller changes

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -211,6 +211,12 @@ html::after {
 
 .signature-scrolling-banner .signature-scrolling-track img {
   max-height: 10em;
+  padding-right: 3em;
+  // border-right: 1px solid var(--bulma-border, black);
+}
+
+.signature-scrolling-banner .signature-scrolling-track img {
+  max-height: 10em;
   padding-right: 1.5em;
 
   /* 1. Define the border on the right only */
