--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -4,7 +4,7 @@
     <div class="hero-body {% if page.hero_darken %} hero-darken {% endif %}">
         <div class="container">
             <h1 class="title is-2">{{ page.title }}</h1>
-            <p class="subtitle is-4">{{ page.subtitle }}</p>
+            <p class="subtitle is-4">{{ page.subtitle | default: page.description }}</p>
             {% if page.hero_link %}
                 <div class="buttons my-4">
                 <a href="{{ page.hero_link }}" class="button is-link is-normal is-hovered has-text-black has-text-left" {{ page.hero_link_style }}>{{ page.hero_link_text }}</a>
