--- a/_includes/post-card.html
+++ b/_includes/post-card.html
@@ -9,6 +9,8 @@
             </h2>
             {% if post.summary %}
                 {% assign truncated_text = post.summary | markdownify | replace: "<br>", "_NEWLINE_" | replace: "</h2>", "_NEWLINE_" | replace: "</p>", "_NEWLINE_" | strip_html %}
+            {% elsif post.description %}
+                {% assign truncated_text = post.description | markdownify | replace: "<br>", "_NEWLINE_" | replace: "</h2>", "_NEWLINE_" | replace: "</p>", "_NEWLINE_" | strip_html %}
             {% else %}
                 {% assign truncated_text = post.content | markdownify | replace: "<br>", "_NEWLINE_" | replace: "</h2>", "_NEWLINE_" | replace: "</p>", "_NEWLINE_" | strip_html | truncatewords: 50 %}
             {% endif %}
