--- a/_includes/post-card.html
+++ b/_includes/post-card.html
@@ -9,20 +9,25 @@
             </h2>
             {% if post.summary %}
                 {% assign truncated_text = post.summary | markdownify | replace: "<br>", "_NEWLINE_" | replace: "</h2>", "_NEWLINE_" | replace: "</p>", "_NEWLINE_" | strip_html %}
-            {% elsif post.description %}
-                {% assign truncated_text = post.description | markdownify | replace: "<br>", "_NEWLINE_" | replace: "</h2>", "_NEWLINE_" | replace: "</p>", "_NEWLINE_" | strip_html %}
             {% else %}
                 {% assign truncated_text = post.content | markdownify | replace: "<br>", "_NEWLINE_" | replace: "</h2>", "_NEWLINE_" | replace: "</p>", "_NEWLINE_" | strip_html | truncatewords: 50 %}
             {% endif %}
             {% assign lines = truncated_text | split: "_NEWLINE_" %}
-            {% for line in lines %}
-                {% if forloop.first %}
-                    <p><strong>{{ line }}</strong></p>
-                {% else %}
+            {% if post.description %}
+                <p><strong>{{ post.description | markdownify | replace: "<br>", "_NEWLINE_" | replace: "</h2>", "_NEWLINE_" | replace: "</p>", "_NEWLINE_" | strip_html }}</strong></p>
+                {% for line in lines %}
                     <p>{{ line }}</p>
-                {% endif %}
-            {% endfor %}
-        </div>
+                {% endfor %}
+            {% else %}
+                {% for line in lines %}
+                    {% if forloop.first %}
+                        <p><strong>{{ line }}</strong></p>
+                    {% else %}
+                        <p>{{ line }}</p>
+                    {% endif %}
+                {% endfor %}
+            {% endif %}
+            </div>
         <div>
             <a href="{{ site.baseurl }}{{ post.url }}" class="button has-text-black" style="background-color: limegreen;">{{ site.data[site.active_lang].strings.post_read_full }}</a>
         </div>
