--- a/_includes/post-card.html
+++ b/_includes/post-card.html
@@ -14,7 +14,10 @@
             {% endif %}
             {% assign lines = truncated_text | split: "_NEWLINE_" %}
             {% if post.description %}
-                <p><strong>{{ post.description | markdownify | replace: "<br>", "_NEWLINE_" | replace: "</h2>", "_NEWLINE_" | replace: "</p>", "_NEWLINE_" | strip_html }}</strong></p>
+                {% assign description = {{ post.description | markdownify | replace: "<br>", "_NEWLINE_" | replace: "</h2>", "_NEWLINE_" | replace: "</p>", "_NEWLINE_" | strip_html | split: "_NEWLINE_" }} %}
+                {% for line in description %}
+                    <p><strong>{{ line }}</strong></p>
+                {% endfor %}
                 {% for line in lines %}
                     <p>{{ line }}</p>
                 {% endfor %}
